force-app/main/default/objects/Project__c/fields/AssignedHours__c.field-meta.xml
<CustomField>
    <fullName>AssignedHours__c</fullName>
    <label>AssignedHours</label>
    <summarizedField>ProjectLineItem__c.ResourceHours__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>