force-app/main/default/objects/Project__c/fields/CompletedTasks__c.field-meta.xml
<CustomField>
    <fullName>CompletedTasks__c</fullName>
    <label>Completed Tasks</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>