force-app/main/default/objects/Project__c/fields/ResourceAmount__c.field-meta.xml
<CustomField>
    <fullName>ResourceAmount__c</fullName>
    <label>ResourceAmount</label>
    <summarizedField>ProjectLineItem__c.Amount_Sum__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>