force-app/main/default/objects/Project__c/fields/Squad_Lead__c.field-meta.xml
<CustomField>
    <fullName>Squad_Lead__c</fullName>
    <formula>SquadLead__r.FirstName  + &apos; &apos; +  SquadLead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Squad Lead</label>
    <type>Text</type>
</CustomField>