force-app/main/default/objects/Project__c/fields/TasksCount__c.field-meta.xml
<CustomField>
    <fullName>TasksCount__c</fullName>
    <label>Tasks Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>