force-app/main/default/objects/Project__c/validationRules/LastModifiedByValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>LastModifiedByValidationRule</fullName>
    <active>false</active>
    <errorConditionFormula>IF(LastModifiedById &lt;&gt; ProjectManager__c , true, false)</errorConditionFormula>
    <errorMessage>You can&apos;t update this record unless you&apos;re the Project Manager.</errorMessage>
</ValidationRule>