force-app/main/default/objects/Project__c/validationRules/StatusInProgressValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusInProgressValidation</fullName>
    <active>false</active>
    <errorConditionFormula>IF(  ISPICKVAL( Status__c , &apos;In Progress&apos;) , OR(ISCHANGED( Account__c ),  ISCHANGED( Amount__c ) , ISCHANGED( EndDate__c ), ISCHANGED( Opportunity__c ), ISCHANGED( ProjectManager__c ), ISCHANGED( SquadLead__c ), ISCHANGED( StartDate__c ), ISCHANGED( Total_Hours__c ), ISCHANGED( OwnerId ), ISCHANGED( AssignedHours__c ), ISCHANGED( ResourceAmount__c )  ), false)</errorConditionFormula>
    <errorMessage>You can&apos;t change fields when the project is in progress.</errorMessage>
</ValidationRule>