force-app/main/default/objects/Project__c/listViews/My_Projects.listView-meta.xml
<ListView>
    <fullName>My_Projects</fullName>
    <columns>NAME</columns>
    <columns>SquadLead__c</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <columns>Total_Hours__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Projects</label>
    <sharedTo>
        <role>Project_Manager</role>
    </sharedTo>
</ListView>