force-app/main/default/objects/Project__c/listViews/ResourceProjects.listView-meta.xml
<ListView>
    <fullName>ResourceProjects</fullName>
    <columns>NAME</columns>
    <columns>ProjectManager__c</columns>
    <columns>SquadLead__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Resource Projects</label>
    <sharedTo>
        <role>Architect</role>
        <role>Consultant</role>
        <role>Developer</role>
    </sharedTo>
</ListView>